# rolldown

./: .eslintrc.yml  .gitignore  Cargo.toml  README.md  out.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
core/: Cargo.toml
crates/rolldown/: Cargo.toml
crates/rolldown/benches/: lodash.rs
crates/rolldown/examples/: basic.rs  lodash.rs  three.rs
crates/rolldown/fixtures/.circle/: foo.js
crates/rolldown/fixtures/.naming-de-conflict-for-destructuring-assignment/: c.js  d.js
crates/rolldown/fixtures/.tree-shake-decl/: decl.js
crates/rolldown/fixtures/_basic-import-default/: foo.js
crates/rolldown/fixtures/_basic-import-default/expected/: main.js
crates/rolldown/fixtures/_re-export-chains/: b.js  index.js
crates/rolldown/fixtures/_re-export-chains/expected/: main.js
crates/rolldown/fixtures/_re-export-namespace/expected/: main.js
crates/rolldown/fixtures/basic-algr-for-default-export-with-invlid-filename/: index.js
crates/rolldown/fixtures/basic-algr-for-default-export-with-invlid-filename/expected/: main.js
crates/rolldown/fixtures/basic-entry-export/: index.js
crates/rolldown/fixtures/basic-entry-export-default-expr/expected/: main.js
crates/rolldown/fixtures/basic-export/expected/: main.js
crates/rolldown/fixtures/basic-import-default-class-decl/: foo.js
crates/rolldown/fixtures/basic-import-default-class-decl/expected/: main.js
crates/rolldown/fixtures/basic-import-default-class-expr/expected/: main.js
crates/rolldown/fixtures/basic-import-default-expr/expected/: main.js
crates/rolldown/fixtures/basic-import-default-fn-decl/: foo.js
crates/rolldown/fixtures/basic-import-default-fn-decl/expected/: main.js
crates/rolldown/fixtures/basic-import-default-fn-expr/: index.js
crates/rolldown/fixtures/basic-import-default-fn-expr/expected/: main.js
crates/rolldown/fixtures/basic-import-namespace-with-default-export/expected/: main.js
crates/rolldown/fixtures/basic-import-namespace/expected/: main.js
crates/rolldown/fixtures/basic-namespace-import/: index.js
crates/rolldown/fixtures/basic-namespace-import/expected/: main.js
crates/rolldown/fixtures/basic-naming-de-conflict/expected/: main.js
crates/rolldown/fixtures/basic-re-export-all/expected/: main.js
crates/rolldown/fixtures/basic-re-export-default-as/: foo.js
crates/rolldown/fixtures/basic-re-export-default-as/expected/: main.js
crates/rolldown/fixtures/basic-re-export-default/expected/: main.js
crates/rolldown/fixtures/basic-re-export/expected/: main.js
crates/rolldown/fixtures/circle/: index.js
crates/rolldown/fixtures/destructuring-assignment-object-export/: index.js
crates/rolldown/fixtures/naming-de-conflict-for-object-prop/: foo.js  index.js
crates/rolldown/fixtures/naming-de-conflict-in-muliple-files/: a.js  c.js  index.js
crates/rolldown/fixtures/re-export-chains/: a.js
crates/rolldown/fixtures/re-export-namespace/: foo.js  index.js
crates/rolldown/src/: lib.rs
crates/rolldown/tests/: mod.rs
crates/rolldown/tests/common/: mod.rs
crates/rolldown/tests/fixtures/: mod.rs
crates/rolldown_core/: Cargo.toml
crates/rolldown_core/src/: bundle.rs  chunk.rs  chunk_graph.rs  graph.rs  lib.rs  module.rs  resolving_module_job.rs  ufriend.rs
crates/rolldown_core/src/chunk_spliter/: split_chunks.rs
crates/rolldown_core/src/options/: mod.rs  normalized_input_options.rs  normalized_output_options.rs
crates/rolldown_core/src/plugin/: api.rs  plugin_driver.rs
crates/rolldown_core/src/utils/: ast_builder.rs  hooks.rs  mod.rs  name_helpers.rs  shake.rs  side_effect.rs
crates/rolldown_core/src/visitors/: export_remover.rs  mod.rs  renamer.rs  shaker.rs
(+124 files in other folders)
