[package]
name = "rolldown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev_dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3.0"

[dependencies]
rolldown_core = { path = "../rolldown_core" }
dashmap = "5.0.0"
crossbeam = "0.8.1"
futures = "0.3.21"
tracing = "0.1.34"
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["full"] }
sugar_path = "0.0.5"
nodejs-resolver = "0.0.14"
once_cell = "1"
anyhow = "1"
rspack_sources = "0.0.3"
hashbrown = { version = "0.12.1", features = ["rayon"]}
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
petgraph = "0.6.0"
tracing-chrome = "0.6.0"
rayon = "1.5.3"
url = "2.2.2"
swc = "0.186.0"                        # Speedy web compiler
swc_ecma_ast = "0.79.0"                # Ecmascript ast.
swc_ecma_visit = "0.65.0"          # Visitors for swc ecmascript nodes which works on stable rustc
swc_common = "0.18.8"          # Common utilities for the swc project.
swc_ecma_parser = "0.105.0"         # Feature-complete es2019 parser.
swc_atoms = "0.2.11"    # Atoms for the swc project.
swc_ecma_transforms = "0.158.0"                 # rust port of babel and closure compiler.
swc_ecma_utils = "0.86.1"     # Utilities for swc ecmascript ast nodes
linked_hash_set = "0.1.4"
typemap = "0.3.3"
better_scoped_tls = "0.1.0"