[package]
name = "rolldown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev_dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3.0"

[dependencies]
rolldown_core = { path = "../rolldown_core" }
dashmap = "5.0.0"
crossbeam = "0.8.1"
futures = "0.3.21"
tracing = "0.1.34"
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["full"] }
sugar_path = "0.0.5"
nodejs-resolver = "0.0.14"
once_cell = "1"
anyhow = "1"
rspack_sources = "0.0.3"
hashbrown = { version = "0.12.1", features = ["rayon"]}
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
petgraph = "0.6.0"
tracing-chrome = "0.6.0"
rayon = "1.5.3"
url = "2.2.2"
linked_hash_set = "0.1.4"
typemap = "0.3.3"
better_scoped_tls = "0.1.0"