[package]
name = "rolldown_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.0.0"
crossbeam = "0.8.1"
futures = "0.3.21"
tracing = "0.1.34"
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["full"] }
sugar_path = "0.0.5"
nodejs-resolver = "0.0.14"
once_cell = "1"
anyhow = "1"
rspack_sources = "0.0.3"
hashbrown = { version = "0.12.1", features = ["rayon"]}
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
petgraph = "0.6.0"
tracing-chrome = "0.6.0"
rayon = "1.5.3"
url = "2.2.2"
linked_hash_set = "0.1.4"
swc = "0.196.1"
# swc_ecma_ast = "0.79.0"                # Ecmascript ast.
ast = {package = "swc_ecma_ast", version = "0.81.0"}                # Ecmascript ast.
swc_ecma_visit = "0.67.0"
swc_common = { version = "0.20.1", features = ["tty-emitter", "concurrent"] }          # Common utilities for the swc project.
swc_ecma_parser = "0.108.0"
swc_atoms = "0.2.13"
swc_ecma_transforms = "0.167.0"
swc_ecma_utils = "0.89.0"
swc_ecma_transforms_optimization = "0.136.0"
swc_ecma_codegen = { version = "0.112.0" }
ena = "0.14.0"
regex = "1.5.4"
